--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,13 +1,5 @@
 {
-    "extends": "./tsconfig.json",
-    "include": [
-        "src/**/*",
-        "package.json"
-    ],
-    "exclude": [
-        "node_modules",
-        "dist",
-        "test",
-        "build.ts"
-    ]
+  "extends": "./tsconfig.json",
+  "include": ["src/**/*", "package.json"],
+  "exclude": ["node_modules", "dist", "test", "build.ts"]
 }
