--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,7 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "lib": [
-      "ESNext"
-    ],
+    "lib": ["ESNext"],
     // Output
     "outDir": "./dist",
     "declaration": true,
@@ -26,18 +24,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     // Bun Types
-    "types": [
-      "bun-types"
-    ]
+    "types": ["bun-types"]
   },
-  "include": [
-    "src/**/*",
-    "test/**/*",
-    "build.ts",
-    "package.json"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src/**/*", "test/**/*", "build.ts", "package.json"],
+  "exclude": ["node_modules", "dist"]
 }
