fix: flatten type definitions in build output and update package configuration to reflect new type paths.

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,12 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*", "package.json"],
-  "exclude": ["node_modules", "dist", "test", "build.ts"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "test",
+    "build.ts"
+  ]
 }
