--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
-  "types": "./dist/types/src/index.d.ts",
+  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
       "import": {
-        "types": "./dist/types/src/index.d.ts",
+        "types": "./dist/types/index.d.ts",
         "default": "./dist/index.mjs"
       },
       "require": {
-        "types": "./dist/types/src/index.d.ts",
+        "types": "./dist/types/index.d.ts",
         "default": "./dist/index.cjs"
       }
     }
