--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "clean": "rm -rf dist coverage"
   },
   "simple-git-hooks": {
-    "pre-commit": "bunx lint-staged"
+    "pre-commit": "bun run test && bunx lint-staged"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,mjs,cjs}": [
